--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ body {
 .header .sidebar-nav {
   position: absolute;
   top: 0;
-  width: 250px;
+  width: 40vw;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -142,13 +142,13 @@ body {
   background: none;
 }
 .header #sidebar-wrapper.active {
-  right: 250px;
-  width: 250px;
+  right: 310px;
+  width: 50vw;
   transition: all 0.4s ease 0s;
 }
 .header .menu-toggle {
   position: fixed;
-  right: 12vh;
+  right: 14vh;
   top: 3vh;
   text-align: center;
   text-decoration: none;
@@ -576,7 +576,7 @@ body {
 }
 .header .search input[type=search] {
   width: 24px;
-  padding-left: 10px;
+  padding-left: 2vw;
   background: url("../img/search.svg") no-repeat 2px center;
   border: solid 1px transparent;
   color: transparent;
@@ -591,7 +591,7 @@ body {
   background-color: #fff;
 }
 .header .search input[type=search]:focus {
-  width: 25vw;
+  width: 40vw;
   padding: 1vh 2vw 1vh 5vw;
   color: #000;
   background-color: #fff;
@@ -601,6 +601,13 @@ body {
 }
 .header .search input[type=search]:focus::placeholder {
   color: #a9a9a9;
+  padding-left: 6vw;
+}
+@media (max-width: 575px) {
+  .header .search input[type=search]:focus {
+    width: 70vw;
+    padding-left: 18vw;
+  }
 }
 @media (max-width: 1199px) {
   .header {
