--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,13 @@ button:active {
   opacity: 0.5;
 }
 
+.menu,
+#sidebar-wrapper,
+.menu-toggle,
+.fa-bars {
+  display: none;
+}
+
 body {
   font-family: "Josefin Sans", sans-serif;
   font-size: 16px;
@@ -89,90 +96,16 @@ body {
   margin-bottom: 15vh;
   background-color: #ffffff;
 }
-.header #sidebar-wrapper {
-  position: fixed;
-  z-index: 2;
-  right: 0;
-  width: 20vw;
-  height: 60vh;
-  transition: all 0.4s ease 0s;
-  transform: translateX(250px);
-  background: rgba(255, 255, 255, 0.8);
-  border-left: 1px solid rgba(255, 255, 255, 0.1);
-}
-.header .sidebar-nav {
-  position: absolute;
-  top: 0;
-  width: 40vw;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-.header .sidebar-nav li.sidebar-nav-item a {
-  display: block;
-  text-decoration: none;
-  color: #d24d57;
-  padding: 15px;
-  font-weight: 500;
-}
-.header .sidebar-nav li a:hover {
-  text-decoration: none;
-  transform: scale(1.1);
-  transition: all 0.5 ease;
-  background: rgba(255, 255, 255, 0.2);
-}
-.header .sidebar-nav li a:active,
-.header .sidebar-nav li a:focus {
-  text-decoration: none;
-}
-.header .sidebar-nav > .sidebar-brand {
-  font-size: 1.2rem;
-  background: rgba(52, 58, 64, 0.1);
-  height: 80px;
-  line-height: 50px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 15px;
-}
-.header .sidebar-nav > .sidebar-brand a {
-  color: #fff;
-}
-.header .sidebar-nav > .sidebar-brand a:hover {
-  color: #fff;
-  background: none;
-}
-.header #sidebar-wrapper.active {
-  right: 310px;
-  width: 50vw;
-  transition: all 0.4s ease 0s;
-}
-.header .menu-toggle {
-  position: fixed;
-  right: 14vh;
-  top: 3vh;
-  text-align: center;
-  text-decoration: none;
-  background: transparent;
-  line-height: 50px;
-  z-index: 60;
-}
-.header .menu-toggle .fa-bars {
-  color: #a9a9a9;
-  z-index: 60;
-}
-.header .menu-toggle .fa {
-  margin-right: 3vw;
-  margin-top: 6vh;
-}
-.header .menu-toggle:focus,
-.header .menu-toggle:hover {
-  text-decoration: none;
-  opacity: 0.6;
-}
 .header input,
 .header textarea {
   font-family: "PT Sans", sans-serif;
-  font-size: 1.6rem;
+  font-size: 1.2rem;
+}
+@media (max-width: 575px) {
+  .header input,
+.header textarea {
+    font-size: 10px;
+  }
 }
 .header input::-ms-clear,
 .header textarea::-ms-clear {
@@ -385,8 +318,13 @@ body {
   top: 50%;
   bottom: auto;
   transform: translateY(-50%);
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   color: #343642;
+}
+@media (max-width: 575px) {
+  .header .cd-signin-modal__hide-password {
+    font-size: 10px;
+  }
 }
 .header .cd-signin-modal__error {
   display: inline-block;
@@ -625,6 +563,94 @@ body {
   }
   .header .nav {
     display: none;
+  }
+  .header .menu,
+.header #sidebar-wrapper,
+.header .menu-toggle,
+.header .fa-bars {
+    display: block;
+  }
+  .header #sidebar-wrapper {
+    position: fixed;
+    z-index: 2;
+    right: 0;
+    width: 20vw;
+    height: 60vh;
+    transition: all 0.4s ease 0s;
+    transform: translateX(250px);
+    background: rgba(255, 255, 255, 0.8);
+    border-left: 1px solid rgba(255, 255, 255, 0.1);
+  }
+  .header .sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 40vw;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  .header .sidebar-nav li.sidebar-nav-item a {
+    display: block;
+    text-decoration: none;
+    color: #d24d57;
+    padding: 15px;
+    font-weight: 500;
+    font-size: 20px;
+    text-align: center;
+  }
+  .header .sidebar-nav li a:hover {
+    text-decoration: none;
+    transform: scale(1.1);
+    transition: all 0.5 ease;
+    background: rgba(255, 255, 255, 0.2);
+  }
+  .header .sidebar-nav li a:active,
+.header .sidebar-nav li a:focus {
+    text-decoration: none;
+  }
+  .header .sidebar-nav > .sidebar-brand {
+    font-size: 1.2rem;
+    background: rgba(52, 58, 64, 0.1);
+    height: 60px;
+    line-height: 50px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 15px;
+  }
+  .header .sidebar-nav > .sidebar-brand a {
+    color: #fff;
+  }
+  .header .sidebar-nav > .sidebar-brand a:hover {
+    color: #fff;
+    background: none;
+  }
+  .header #sidebar-wrapper.active {
+    right: 310px;
+    width: 50vw;
+    transition: all 0.4s ease 0s;
+  }
+  .header .menu-toggle {
+    position: fixed;
+    right: 14vh;
+    top: 3vh;
+    text-align: center;
+    text-decoration: none;
+    background: transparent;
+    line-height: 50px;
+    z-index: 60;
+  }
+  .header .menu-toggle .fa-bars {
+    color: #a9a9a9;
+    z-index: 60;
+  }
+  .header .menu-toggle .fa {
+    margin-right: 3vw;
+    margin-top: 6vh;
+  }
+  .header .menu-toggle:focus,
+.header .menu-toggle:hover {
+    text-decoration: none;
+    opacity: 0.6;
   }
 }
 @media (max-width: 991px) {
@@ -868,10 +894,11 @@ body {
 }
 
 .footer {
-  padding-top: 6vh;
+  padding-top: 2vh;
   background-color: #000;
   color: rgba(254, 254, 254, 0.6);
   font-size: 14px;
+  margin-bottom: -6vh;
 }
 .footer .logo {
   margin-left: 2vw;
